--- a/app/apply_blueprint/static/harness.html
+++ b/app/apply_blueprint/static/harness.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <div id="foundation">
-      Loading...
+      This is out of date.  Would have to fake the tc.env variables to work.
     </div>
     <script src="bundle.js"></script>
   </body>
